# pi-slam-manipulator

./: LICENSE  README.md  main.py  pyproject.toml
install/: local_setup.sh  setup.sh
install/camera_package/share/camera_package/: package.sh  package.xml
log/: latest_build
src/camera_package/: setup.py
src/camera_package/camera_package/: camera_publisher.py  capture_image.py  image_saver.py  pyslam_camera_node.py
src/camera_package/install/: local_setup.sh  setup.sh
src/camera_package/install/camera_package/share/camera_package/: package.sh
src/camera_package/install/camera_package/share/camera_package/launch/: camera.launch.py
src/camera_package/log/: latest_build
src/image_receiver/: package.xml  setup.cfg  setup.py
src/image_receiver/image_receiver/: image_receiver.py
src/image_receiver/launch/: launch.py
